Link to GitHub milestone or JIRA version from calendar entries
Closes gh-5